--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700&display=swap');
+@import '@/assets/scss/_vars.scss';
 
 .container{
   margin: 0 auto;
@@ -64,4 +65,39 @@ html::-webkit-scrollbar { width: 0; }
   line-height: 29px;
 }
 
+.check{
+  width: 0;
+  height: 0;
+  position: absolute;
+  opacity: 0;
+  visibility: hidden;
+  &:checked ~ .castom-check{
+    background: $accent;
+    &:before{
+      left: calc(100% - 19px);
+    }
+  }
+}
 
+.castom-check{
+  display: block;
+  background: rgba(0, 0, 0, 0.08);
+  border-radius: 35px;
+  width: 38px;
+  height: 20px;
+  position: relative;
+  cursor: pointer;
+  &:before{
+    transition: all 0.3s ease-in-out;
+    content: '';
+    width: 16px;
+    height: 16px;
+    background: #FFFFFF;
+    box-shadow: 0px 0px 7.10526px rgba(0, 0, 0, 0.15);
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border-radius: 50%;
+    left: 3px;
+  }
+}
