--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -14,6 +14,9 @@
   padding: 20px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
   border-radius: 12px;
+  -ms-overflow-style: none;
+  overflow: -moz-scrollbars-none;
+  &::-webkit-scrollbar { width: 0; }
   &-title{
     font-weight: 600;
     font-size: 16px;
@@ -50,6 +53,8 @@ html{
 }
 
 html::-webkit-scrollbar { width: 0; }
+
+
 
 .grid{
   display: flex;
@@ -99,5 +104,49 @@ html::-webkit-scrollbar { width: 0; }
     transform: translateY(-50%);
     border-radius: 50%;
     left: 3px;
+  }
+}
+
+.schet{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  font-weight: 600;
+  &-btn{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    background: rgba(0, 0, 0, 0.08);
+    cursor: pointer;
+    &-minus{
+      margin-right: 20px;
+    }
+    &-plus{
+      margin-left: 20px;
+      background-color: $accent;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+  }
+}
+
+.list{
+  padding-left: 16px;
+  &__item{
+    position: relative;
+    &+&{
+      margin-top: 20px;
+    }
+    &:before{
+      content: '';
+      position: absolute;
+      top: 4px;
+      left: -16px;
+      width: 8px;
+      height: 8px;
+      border-radius: 50%;
+      background-color: $accent;
+    }
   }
 }
