--- a/src/assets/scss/_normalize.css
+++ b/src/assets/scss/_normalize.css
@@ -385,3 +385,17 @@ p{
     padding: 0;
     margin: 0;
 }
+
+
+input{
+    border: none;
+}
+
+input[type=number] {
+    -moz-appearance: textfield;
+}
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+}
