--- a/src/assets/scss/_global.scss
+++ b/src/assets/scss/_global.scss
@@ -7,6 +7,14 @@
   width: 100%;
 }
 
+.input{
+  padding-bottom: 8px;
+  border-bottom: 1px solid rgba(0, 0, 0, 0.08);
+  &::placeholder{
+    color: rgba(0, 0, 0, 0.32);
+  }
+}
+
 .block{
   background: #fff;
   max-width: 352px;
@@ -14,9 +22,6 @@
   padding: 20px;
   box-shadow: 0px 0px 8px rgba(0, 0, 0, 0.15);
   border-radius: 12px;
-  -ms-overflow-style: none;
-  overflow: -moz-scrollbars-none;
-  &::-webkit-scrollbar { width: 0; }
   &-title{
     font-weight: 600;
     font-size: 16px;
@@ -44,15 +49,17 @@
   font-weight: 600;
   font-size: 14px;
   line-height: 17px;
+  text-align: center;
 }
 
 html{
   font-family: 'Montserrat', sans-serif;
+}
+*{
   -ms-overflow-style: none;
   overflow: -moz-scrollbars-none;
+  &::-webkit-scrollbar { width: 0; }
 }
-
-html::-webkit-scrollbar { width: 0; }
 
 
 
@@ -133,6 +140,10 @@ html::-webkit-scrollbar { width: 0; }
 
 .list{
   padding-left: 16px;
+  font-weight: 500;
+  font-size: 14px;
+  line-height: 17px;
+  color: #111111;
   &__item{
     position: relative;
     &+&{
@@ -148,5 +159,55 @@ html::-webkit-scrollbar { width: 0; }
       border-radius: 50%;
       background-color: $accent;
     }
+  }
+}
+
+.select{
+  font-weight: 600;
+  font-size: 14px;
+  line-height: 17px;
+  width: 100%;
+  color: #000000;
+  position: relative;
+  &__value{
+    padding: 13px 16px;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+  }
+  &__list{
+    display: none;
+    border: 1px solid rgba(0, 0, 0, 0.08);
+    border-radius: 8px;
+    cursor: pointer;
+    position: absolute;
+    width: 100%;
+    background-color: #fff;
+    &-item{
+      padding: 13px 16px;
+      &+&{
+        border-top: 1px solid rgba(0, 0, 0, 0.08);
+      }
+    }
+    &.active{
+      display: block;
+    }
+  }
+}
+
+textarea{
+  border: 1px solid rgba(0, 0, 0, 0.08);
+  border-radius: 8px;
+  padding: 12px;
+  resize: none;
+  height: 74px;
+  &::placeholder{
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(0, 0, 0, 0.32);
   }
 }
